creacion de Vistas, Modelo, Base de Datos y conexon a la API de Stocks

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Basicapp\\Stocks\\": "src/"
+            "src\\": "src/"
         }
     },
     "authors": [
@@ -13,5 +13,7 @@
             "email": "damotaelton@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
